--- a/TestCase.vm
+++ b/TestCase.vm
@@ -2,12 +2,12 @@
 
 module("${moduleName}", {
     setup: function() {
-        // runs before each test
-		${testSetupCode}
+        // generate fixture before each test
+		$("#qunit-fixture").append('${fixture}');
     },
     teardown: function() {
         // runs after each test
-		${testTearDownCode}
+		//${testTearDownCode}
     }
 });
 
@@ -15,6 +15,7 @@ module("${moduleName}", {
 #foreach( $function in $testFunctions )
 
 test("${function.functionName}", function() {
+	expect(0);
     // test something
 #foreach( $statement in $function.statements )
 	$statement
