--- a/TestCase.vm
+++ b/TestCase.vm
@@ -3,7 +3,7 @@
 module("${moduleName}", {
     setup: function() {
         // generate fixture before each test
-		$("#qunit-fixture").append('${fixture}');
+		//$("#qunit-fixture").append('${fixture}');
     },
     teardown: function() {
         // runs after each test
@@ -16,6 +16,7 @@ module("${moduleName}", {
 
 test("${function.functionName}", function() {
 	expect(0);
+	$("#qunit-fixture").append('${function.fixture}');
 #foreach( $statement in $function.statements )
 	$statement
 #end
